super awesome completion server
marriage between Haxe Completion with JSON. Now, the completion is
instant !

--- a/bin/theme.css
+++ b/bin/theme.css
@@ -149,3 +149,13 @@ color:#ffffff;
   font-weight: normal;
   font-style: normal;
 }
+
+.CodeMirror-hints
+{
+height:100px !important;
+}
+
+.nav>li>a
+{
+padding: 5px 10px;
+}
