--- a/bin/theme.css
+++ b/bin/theme.css
@@ -12,10 +12,12 @@ margin-right:10px;
 /* menu color */
 .navbar-default
 {
-font-family:"Lato";
+font-family:"Ubuntu";
 font-size:15px;
 background-color:#2C3E50;
 border:0px;
+background:url(bg.png) repeat;
+border-bottom:1px solid #888888;
 }
 hr
 {
@@ -58,15 +60,20 @@ font-weight:bold;
 
 #content
 {
-background:#2C3E50;
+/*background:#2C3E50;*/
+
+
 }
 #left-panel
 {
 background-color:#2C3E50;
+background:url(bg.png) repeat;
 }
 #right-panel
 {
 background:#34495e;
+background:url(bg.png) repeat;
+
 }
 
 
@@ -83,6 +90,7 @@ color:#ffffff;
 {
 color:#F1C40F;
 }
+
 
 
 /* menu dropdown */
@@ -106,7 +114,7 @@ background:#2154ac;
 color:#ffffff;
 }
 
-
+/*
 @font-face {
   font-family: 'Lato';
   src: url('./fonts/lato/lato-black-webfont.eot');
@@ -114,6 +122,7 @@ color:#ffffff;
   font-weight: 900;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Lato';
   src: url('./fonts/lato/lato-bold-webfont.eot');
@@ -149,7 +158,7 @@ color:#ffffff;
   font-weight: normal;
   font-style: normal;
 }
-
+*/
 .CodeMirror-hints
 {
 height:100px !important;
