--- a/plugin/plugin.misterpah.Editor/bin/editor.css
+++ b/plugin/plugin.misterpah.Editor/bin/editor.css
@@ -1,7 +1,3 @@
-.CodeMirror-activeline-background{
-	background:#f3f3f3;
-}
-
 @font-face {
   font-family: 'inconsolata';
   src: url('./Inconsolata.otf');
@@ -10,4 +6,11 @@
 .CodeMirror{
 font-family:'inconsolata';
 font-size:16px;
+}
+
+.lint-error {
+font-size: 70%;
+background: #ffa;
+color: #a00;
+padding: 2px 5px 3px;
 }
