--- a/bin/theme.css
+++ b/bin/theme.css
@@ -14,10 +14,8 @@ margin-right:10px;
 {
 font-family:"Ubuntu";
 font-size:15px;
-background-color:#2C3E50;
 border:0px;
-background:url(bg.png) repeat;
-border-bottom:1px solid #888888;
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#131313), color-stop(10%,#2b2b2b),color-stop(90%,#2b2b2b), color-stop(100%,#131313)); /* Chrome,Safari4+ */
 }
 hr
 {
@@ -73,7 +71,6 @@ background:url(bg.png) repeat;
 {
 background:#34495e;
 background:url(bg.png) repeat;
-
 }
 
 
@@ -89,6 +86,7 @@ color:#ffffff;
 .navbar-default .navbar-nav>li>a:hover
 {
 color:#F1C40F;
+background:#ae440f;
 }
 
 
@@ -96,7 +94,7 @@ color:#F1C40F;
 /* menu dropdown */
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus
 {
-background:#2154ac;
+background:#ae440f;
 color:#ffffff;
 }
 
@@ -106,65 +104,80 @@ color:#ffffff;
 border:1px solid #397ff6;
 border:0px;
 border-left:0px;
-background:#2154ac;
+background:#ae440f;
+text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.4);
 }
 /* menu dropdown */
 .dropdown-menu>li>a
 {
 color:#ffffff;
+
 }
 
-/*
-@font-face {
-  font-family: 'Lato';
-  src: url('./fonts/lato/lato-black-webfont.eot');
-  src: url('./fonts/lato/lato-black-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-black-webfont.woff') format('woff'), url('../fonts/lato/lato-black-webfont.ttf') format('truetype'), url('./fonts/lato/lato-black-webfont.svg#latoblack') format('svg');
-  font-weight: 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url('./fonts/lato/lato-bold-webfont.eot');
-  src: url('./fonts/lato/lato-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-bold-webfont.woff') format('woff'), url('../fonts/lato/lato-bold-webfont.ttf') format('truetype'), url('./fonts/lato/lato-bold-webfont.svg#latobold') format('svg');
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('./fonts/lato/lato-bolditalic-webfont.eot');
-  src: url('./fonts/lato/lato-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-bolditalic-webfont.woff') format('woff'), url('../fonts/lato/lato-bolditalic-webfont.ttf') format('truetype'), url('./fonts/lato/lato-bolditalic-webfont.svg#latobold_italic') format('svg');
-  font-weight: bold;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('./fonts/lato/lato-italic-webfont.eot');
-  src: url('./fonts/lato/lato-italic-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-italic-webfont.woff') format('woff'), url('../fonts/lato/lato-italic-webfont.ttf') format('truetype'), url('./fonts/lato/lato-italic-webfont.svg#latoitalic') format('svg');
-  font-weight: normal;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('./fonts/lato/lato-light-webfont.eot');
-  src: url('./fonts/lato/lato-light-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-light-webfont.woff') format('woff'), url('../fonts/lato/lato-light-webfont.ttf') format('truetype'), url('./fonts/lato/lato-light-webfont.svg#latolight') format('svg');
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('./fonts/lato/lato-regular-webfont.eot');
-  src: url('./fonts/lato/lato-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-regular-webfont.woff') format('woff'), url('../fonts/lato/lato-regular-webfont.ttf') format('truetype'), url('./fonts/lato/lato-regular-webfont.svg#latoregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-*/
 .CodeMirror-hints
 {
 height:100px !important;
 }
 
-.nav>li>a
+.navbar .nav>li>a
 {
 padding: 5px 10px;
+text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.8);
 }
+
+#misterpah_editor_tabs_position ul 
+{
+border-color:#ae440f;
+}
+
+#misterpah_editor_tabs_position ul li
+{
+height:30px;
+}
+
+#misterpah_editor_tabs_position ul li.active a
+{
+color:#ffffff;
+background:#ae440f;
+text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.8);
+border-color:#ae440f;
+}
+
+#misterpah_editor_tabs_position ul li a:hover
+{
+color:#ffffff;
+background:#f5af8c;
+text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.8);
+border-color:#ae440f;
+}
+
+
+#misterpah_editor_tabs_position ul li a
+{
+top:-7px;
+color:#ae440f;
+font-family:"Ubuntu";
+font-size:15px;
+text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.8);
+}
+
+.lint-error {
+font-size: 70%;
+background: #ffa;
+color: #a00;
+padding: 2px 5px 3px;
+}
+
+
+.cm-s-base16-dark.CodeMirror
+{
+background:url(bg.png) repeat;
+font-family:'inconsolata';
+font-size:16px;
+}
+
+@font-face {
+  font-family: 'inconsolata';
+  src: url('./fonts/Inconsolata.otf');
+}
+
